[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-qdrant>=0.10.0",
    "qdrant-client>=1.17.1",
]
